Crash in [@ wl_egl_window_get_attached_size]
Categories
(Core :: Widget: Gtk, defect, P3)
Tracking
()
Tracking | Status | |
---|---|---|
firefox-esr102 | --- | unaffected |
firefox107 | --- | unaffected |
firefox108 | --- | unaffected |
firefox109 | --- | fixed |
firefox110 | --- | fixed |
People
(Reporter: mccr8, Assigned: stransky)
References
(Blocks 1 open bug, Regression)
Details
(Keywords: crash, regression)
Crash Data
Attachments
(1 file)
48 bytes,
text/x-phabricator-request
|
RyanVM
:
approval-mozilla-release+
|
Details | Review |
Crash report: https://crash-stats.mozilla.org/report/index/5dc41b0c-23d7-43a5-9a38-8955f0221208
Reason: SIGSEGV / SEGV_MAPERR
Top 10 frames of crashing thread:
0 libwayland-egl.so.1 wl_egl_window_get_attached_size /usr/src/debug/wayland/wayland-1.21.0/egl/wayland-egl.c:115
1 libxul.so moz_container_wayland_egl_window_needs_size_update widget/gtk/MozContainerWayland.cpp:711
2 libxul.so nsWindow::SetEGLNativeWindowSize widget/gtk/nsWindow.cpp:9681
3 libxul.so mozilla::wr::RenderCompositorEGL::BeginFrame gfx/webrender_bindings/RenderCompositorEGL.cpp:93
4 libxul.so mozilla::wr::RendererOGL::UpdateAndRender gfx/webrender_bindings/RendererOGL.cpp:164
4 libxul.so mozilla::wr::RenderThread::UpdateAndRender gfx/webrender_bindings/RenderThread.cpp:581
5 libxul.so mozilla::wr::RenderThread::HandleFrameOneDocInner gfx/webrender_bindings/RenderThread.cpp:440
6 libxul.so mozilla::wr::RenderThread::HandleFrameOneDoc gfx/webrender_bindings/RenderThread.cpp:392
7 libxul.so mozilla::detail::RunnableMethodArguments<mozilla::wr::WrWindowId, bool, bool>::applyImpl<mozilla::wr::RenderThread, void xpcom/threads/nsThreadUtils.h:1162
7 libxul.so mozilla::detail::RunnableMethodArguments<mozilla::wr::WrWindowId, bool, bool>::apply<mozilla::wr::RenderThread, void xpcom/threads/nsThreadUtils.h:1168
The crash comment is "Firefox Wayland session on KDE. Uncheck "Title bar" in customization."
Comment 1•2 years ago
|
||
bug 1795851 added wl_egl_window_get_attached_size.
Comment 2•2 years ago
|
||
:stransky, since you are the author of the regressor, bug 1795851, could you take a look? Also, could you set the severity field?
For more information, please visit auto_nag documentation.
Comment 3•2 years ago
|
||
Set release status flags based on info from the regressing bug 1795851
Assignee | ||
Comment 4•2 years ago
|
||
Updated•2 years ago
|
Assignee | ||
Updated•2 years ago
|
Assignee | ||
Updated•2 years ago
|
Updated•2 years ago
|
Pushed by stransky@redhat.com: https://hg.mozilla.org/integration/autoland/rev/c28a3faf7769 [Wayland] Check size for valid EGLWindows only r=emilio
Comment 6•2 years ago
|
||
bugherder |
Comment 8•2 years ago
|
||
It seems this needs to be backported to 109, see bug 1810297 comment 9.
Assignee | ||
Comment 9•2 years ago
|
||
Looks like we missed time to backport it.
Comment 10•2 years ago
|
||
Let's get this into the next 109 dot release. Please nominate when you get a chance, Martin.
Updated•2 years ago
|
Comment 11•2 years ago
|
||
There are crashes with [@ libwayland-egl.so.1@0x1209]
as signature for Firefox 109.0. 13 crashes for 9 installations e.g. bp-87933918-346f-4e56-9758-4ead80230117 The crashes are without symbols so far.
Assignee | ||
Comment 12•2 years ago
|
||
Comment on attachment 9308224 [details]
Bug 1804973 [Wayland] Check size for valid EGLWindows only r?emilio
Beta/Release Uplift Approval Request
- User impact if declined: Crashes on Wayland when Firefox window is resized before it's fully created (i.e. crash after start when window is resized early).
- Is this code covered by automated tests?: No
- Has the fix been verified in Nightly?: No
- Needs manual test from QE?: No
- If yes, steps to reproduce:
- List of other uplifts needed: None
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): Don't update EGL window size when it's not created yet. What can go wrong here?
- String changes made/needed:
- Is Android affected?: No
Assignee | ||
Comment 13•2 years ago
|
||
I wonder which build is that. Does Ubuntu 22.04.1 run Firefox on Wayland by default?
Comment 14•2 years ago
|
||
No, we're still running release builds under XWayland by default on Ubuntu. I was surprised to see Ubuntu crashes in there too, but I guess people can always manually force it to run with Wayland enabled still even if that isn't the shipping configuration. Hopefully that at least limits the severity of this in the wild (especially if Fedora's patching their v109 builds too).
Assignee | ||
Comment 15•2 years ago
|
||
Yes, Fedora ships downstream patch for it.
Comment 16•2 years ago
|
||
Comment on attachment 9308224 [details]
Bug 1804973 [Wayland] Check size for valid EGLWindows only r?emilio
Approved for 109.0.1.
Comment 17•2 years ago
|
||
bugherder uplift |
Description
•