Bug 1804973 [Wayland] Check size for valid EGLWindows only. r=emilio, a=RyanVM

Differential Revision: https://phabricator.services.mozilla.com/D164651